feature(endpoint): create gif endpoint test [Start #288]
